welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var Ctab=new Array[Color](getMondeHauteur())
  for (i<- 1 to getMondeHauteur()) {
    Ctab[i]=getCouleurSol()
    avance()
  }
}